Complete implementation of SessionCookieConfig
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@802146 13f79535-47bb-0310-9956-ffa450edef68